// product/product.proto

syntax = "proto3";

package product;

// import "google/protobuf/wrappers/wrapper.proto";
import "google/protobuf/wrappers.proto";


// The product service definition.
service ProductService {
  // Create a product
  rpc CreateProduct (ProductSchema) returns (ProductSchema) {}
  // Get a product by id
  rpc GetProduct (ProductQuery) returns (ProductSchema) {}
  // Update a product by id
  rpc UpdateProduct (ProductQuery) returns (ProductSchema) {}
  // Delete a product by id
  rpc DeleteProduct (ProductQuery) returns (google.protobuf.StringValue) {}
  // GetProducts gets a list of products by start and count
  rpc GetProducts (ProductsQuery) returns (ProductsResponse) {}
}

// ProductQuery
message ProductQuery {
  int32 id = 1;
  ProductSchema product = 2;
}

// The product interface schema
message ProductSchema {
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 merchant_id = 4;
}

// ProductsQuery describes a Query to get count products starting at id start
message ProductsQuery {
  int32 count = 1;
  int32 start = 2;
}

// ProductsResponse is a list of products
message ProductsResponse {
  repeated ProductSchema products = 1;
}
